[package]
name = "axum_yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["tokio"] }
httpc-test = "0.1.8"
hyper = { version = "1.0.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.35.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
